--- a/allevents.html
+++ b/allevents.html
@@ -30,7 +30,7 @@
             </div>
 
             <ul class="nav-links">
-                <li class="nav-item"><a class="nav-link" href="allevents.html">EVENT</a></li>
+                <li class="nav-item"><a class="nav-link" href="allevents.html">EVENTS</a></li>
             </ul>
         </nav>
 
