--- a/event1.html
+++ b/event1.html
@@ -27,7 +27,7 @@
             </div>
 
             <ul class="nav-links">
-                <li class="nav-item"><a class="nav-link active" href="allevents.html">EVENT</a></li>
+                <li class="nav-item"><a class="nav-link active" href="allevents.html">EVENTS</a></li>
             </ul>
         </nav>
 
