updated navbar and CSS file

--- a/exhibition.html
+++ b/exhibition.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="allevents.css">
     <title>Exhibition</title>
 </head>
 
@@ -19,15 +19,14 @@
     </div>
 
     <div class="container">
-        <div class="exhibition1"></div>
-        <nav class="navbar">
-            <div class="logo">
-                <a href="start.html" class="logo">
-                    <img src="novalogo.png" alt="logo"></a>
-            </div>
-
-            <ul class="nav-links">
-                <li class="nav-item"><a class="nav-link" href="allevents.html">EVENTS</a></li>
+        <nav>
+            <a class="navbar-brand" href="nova.html">
+                <img src="novalogo.png" alt="Logo" class="logo" >
+            </a>
+            <ul class="links">
+               <!-- <li><a href="index.html#about">ABOUT</a></li> -->
+                <li><a href="allevents.html">EVENTS</a></li>
+                <!-- <li><a href="index.html#sponsors">SPONSORS</a></li> -->
             </ul>
         </nav>
 
