--- a/allevents.html
+++ b/allevents.html
@@ -13,6 +13,8 @@
         <div class="circle" id="circle2"></div>
         <div class="circle" id="circle3"></div>
         <div class="circle" id="circle4"></div>
+        <div class="circle" id="circle5"></div>
+        <div class="circle" id="circle6"></div>
     </div>
 
     <div class="container">
